# sagepy_midiaid_adapter

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
__dev/: simpler.py  trying_out_sagepy.py
sagepy_midiaid_adapter/cli/: sagepy_search.py
sagepy_midiaid_adapter/data/: env.txt  imspy.whl  imspy_connector-0.2.35-cp311-cp311-manylinux_2_34_x86_64.whl  imspy_connector-0.3.0-cp311-cp311-manylinux_2_34_x86_64.whl  imspy_connector.whl  sagepy-0.2.27-py3-none-any.whl  sagepy-0.3.0-py3-none-any.whl  sagepy.whl  sagepy_connector-0.2.27-cp311-cp311-manylinux_2_34_x86_64.whl  sagepy_connector-0.3.0-cp311-cp311-manylinux_2_34_x86_64.whl  sagepy_connector.whl
